--- a/mtn.1
+++ b/mtn.1
@@ -9,12 +9,19 @@ This manpage is not well\(hymaintained; it is a summary of monotone's
 capabilities, and probably contains inaccuracies.  For the complete,
 accurate manual, including tutorial, concepts, and full reference
 documentation, please use \fBinfo monotone\fP or refer to
-\fBhttp://monotone.ca/docs/\fP.  (On Debian systems, a local copy of
-the HTML manual is available in the \fBmonotone\-doc\fP package as
-\fB/usr/share/doc/monotone\-doc/html/index.html\fP, along with a
-printable PDF copy.)  The developers will gratefully accept patches to
-arrange that this manpage, the \fI\-\-help\fP output, and the main
-manual are kept in sync mechanically.
+'nh
+.BR http://monotone.ca/docs/ .
+'hy0
+The developers will gratefully accept patches to arrange that this
+manpage, the \fI\-\-help\fP output, and the main manual are kept
+in sync mechanically.
+.P
+On Debian systems, the \fBmonotone\-doc\fP package contains a local
+copy of the HTML manual at
+'nh
+.BR /usr/share/doc/monotone/html/index.html ,
+'hy0
+and a printable PDF version.
 .SH DESCRIPTION
 .P
 Monotone is a version control system, which allows you to keep old
