--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+monotone (0.43-1+testing) unstable; urgency=low
+
+  * Backport to distribution 'testing'.
+
+ -- Richard Levitte <richard@levitte.org>  Tue, 24 Mar 2009 11:19:21 +0100
+
 monotone (0.43-1) unstable; urgency=low
 
   [ Zack Weinberg ]
