--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+monotone (0.43-1+etch) unstable; urgency=low
+
+  * Backport to distribution 'etch'.
+
+ -- Richard Levitte <richard@levitte.org>  Tue, 24 Mar 2009 11:23:48 +0100
+
 monotone (0.43-1) unstable; urgency=low
 
   [ Zack Weinberg ]
