--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-monotone (0.43-1+testing) unstable; urgency=low
+monotone (0.43-1+testing) testing; urgency=low
 
   * Backport to distribution 'testing'.
 
