--- a/changelog
+++ b/changelog
@@ -43,6 +43,12 @@ monotone (0.41-1) unstable; urgency=low
 
  -- Zack Weinberg <zackw@panix.com>  Wed, 03 Sep 2008 23:25:14 +0200
 
+monotone (0.40-7) unstable; urgency=low
+
+  * Re-upload with no changes to correct problems in 0.40-6.diff.gz.
+
+ -- Ludovic Brenta <lbrenta@debian.org>  Mon, 28 Jul 2008 16:18:42 +0200
+	
 monotone (0.40-6) unstable; urgency=low
 
   * dump-test-logs.sh: always exit unsuccessfully, to prevent masking an
