Changes for squeeze only:  - debhelper compat level 7; change build dep on debhelper accordingly  - dh_prep instead of dh_clean -k  - section for all-but-monotone-doc is now 'vcs'  - drop unnecessary versioning of libpcre3-dev build dep also:  - fix reactivation of hyphenation in mtn.1

--- a/changelog
+++ b/changelog
@@ -19,6 +19,9 @@ monotone (0.43-1) unstable; urgency=low
   * Add missing 'set -e' to monotone-doc.postinst.
   * Tweak handling of config.sub/config.guess for build reproducibility.
 
+  * debhelper compat level 7
+  * section changes for squeeze
+
   [ Richard Levitte ]
 
   * Policy 3.8.1:
