--- a/po/es.po
+++ b/po/es.po
@@ -1,16 +1,11 @@
-# monotone po-debconf translation to Spanish.
-# Copyright (C) 2007.
-# This file is distributed under the same license as the monotone package.
+# Spanish debconf templates translation for monotone.
+# Copyright (C) 2007 Elías A.M. <rumbo_4000@yahoo.es>.
+#               2009 Fernando González de Requena <fgrequena@gmail.com>.
 #
-#  Changes:
-# - Initial translation
-#       Elías A.M. <rumbo_4000@yahoo.es>
+# This file is made available under the GNU GPL version 2.0 or
+# greater.  See the accompanying file COPYING for details.
 #
-# - Last revision:
-#       Fernando González de Requena <fgrequena@gmail.com>, 2009.
-# 
-#
-#  Traductores, si no conoce el formato PO, merece la pena leer la 
+#  Traductores, si no conoce el formato PO, merece la pena leer la
 #  documentación de gettext, especialmente las secciones dedicadas a este
 #  formato, por ejemplo ejecutando:
 #         info -n '(gettext)PO Files'
@@ -31,17 +26,17 @@
 # Si tiene dudas o consultas sobre esta traducción consulte con el último
 # traductor (campo Last-Translator) y ponga en copia a la lista de
 # traducción de Debian al español (<debian-l10n-spanish@lists.debian.org>)
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: monotone 0.40-7\n"
-"Report-Msgid-Bugs-To: <monotone-debian@nongnu.org\n"
-"POT-Creation-Date: 2008-07-30 04:33+0200\n"
+"Report-Msgid-Bugs-To: monotone@packages.debian.org\n"
+"POT-Creation-Date: 2009-09-04 14:30-0700\n"
 "PO-Revision-Date: 2009-01-13 20:08+0200\n"
 "Last-Translator: Fernando González de Requena <fgrequena@gmail.com>\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: boolean
@@ -57,7 +52,11 @@ msgid ""
 "Select this option to automatically manage the monotone database. If "
 "selected, the database will automatically be created. Also when upgrading, "
 "the database will be automatically migrated if necessary."
-msgstr "Seleccione esta opción para gestionar automáticamente la base de datos de monotone. Si la selecciona, se creará la base de datos automáticamente. En una actualización, si fuera necesario, la base de datos se migrará automáticamente."
+msgstr ""
+"Seleccione esta opción para gestionar automáticamente la base de datos de "
+"monotone. Si la selecciona, se creará la base de datos automáticamente. En "
+"una actualización, si fuera necesario, la base de datos se migrará "
+"automáticamente."
 
 #. Type: string
 #. Description
@@ -71,7 +70,9 @@ msgstr "Identificador de la clave de monotone:"
 msgid ""
 "Enter the id of the key your monotone server will use. The key id is "
 "typically an email address."
-msgstr "Introduzca el identificador de la clave que usará el servidor monotone. El identificador de la clave normalmente es una dirección de correo electrónico."
+msgstr ""
+"Introduzca el identificador de la clave que usará el servidor monotone. El "
+"identificador de la clave normalmente es una dirección de correo electrónico."
 
 #. Type: password
 #. Description
@@ -85,4 +86,6 @@ msgstr "Frase de paso (contraseña) de monotone:"
 msgid ""
 "Please choose a passphrase for your monotone key. If left blank, one will be "
 "generated for you."
-msgstr "Por favor, escoja una frase de paso (contraseña) para la identificación de clave. Si la deja en blanco, se generará una. "
+msgstr ""
+"Por favor, escoja una frase de paso (contraseña) para la identificación de "
+"clave. Si la deja en blanco, se generará una. "
