--- a/changelog
+++ b/changelog
@@ -1,3 +1,16 @@
+monotone (0.44-3) UNRELEASED; urgency=low
+
+  * Incorporate Russian template translation (closes: #541758).
+    Thanks to Yuri Kozlov.
+  * Update all template translations with debconf-updatepo; this
+    had not been done since 2006.  Fortunately, the templates have
+    not changed in at least that long, so no fuzzies are introduced.
+  * Fix copyright boilerplate on most template translations.  Convert
+    French translation to UTF-8.
+  * Add a README.source to the debian directory.
+
+ -- Zack Weinberg <zackw@panix.com>  Fri, 04 Sep 2009 14:45:23 -0700
+
 monotone (0.44-2) unstable; urgency=low
 
   * Rebuilt against properly versioned botan packages (closes: #527314).
@@ -87,7 +100,7 @@ monotone (0.40-7) unstable; urgency=low
   * Re-upload with no changes to correct problems in 0.40-6.diff.gz.
 
  -- Ludovic Brenta <lbrenta@debian.org>  Mon, 28 Jul 2008 16:18:42 +0200
-	
+
 monotone (0.40-6) unstable; urgency=low
 
   * dump-test-logs.sh: always exit unsuccessfully, to prevent masking an
