--- a/po/cs.po
+++ b/po/cs.po
@@ -1,18 +1,19 @@
-# translation of monotone_0.31-5_cs-utf8.po to czech
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Czech debconf templates translation for monotone.
+# Copyright (C) 2007 Jakub Kasparec <mr.k@centrum.cz>.
 #
-# Jakub Kasparec <mr.k@centrum.cz>, 2007.
+# This file is made available under the GNU GPL version 2.0 or
+# greater.  See the accompanying file COPYING for details.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: monotone_0.31-5_cs-utf8\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-23 04:32+0100\n"
+"Report-Msgid-Bugs-To: monotone@packages.debian.org\n"
+"POT-Creation-Date: 2009-09-04 14:30-0700\n"
 "PO-Revision-Date: 2007-01-27 21:17+0100\n"
 "Last-Translator: Jakub Kasparec <mr.k@centrum.cz>\n"
 "Language-Team: czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
@@ -29,7 +30,11 @@ msgid ""
 "Select this option to automatically manage the monotone database. If "
 "selected, the database will automatically be created. Also when upgrading, "
 "the database will be automatically migrated if necessary."
-msgstr "Jestliže chcete spravovat databázi balíku monotone automaticky, pak zvolte tuto možnost. Zvolíte-li ji, databáze bude vytvořena automaticky a následně při aktualizacích bude také automaticky převedena na novější verzi (bude-li potřeba)."
+msgstr ""
+"Jestliže chcete spravovat databázi balíku monotone automaticky, pak zvolte "
+"tuto možnost. Zvolíte-li ji, databáze bude vytvořena automaticky a následně "
+"při aktualizacích bude také automaticky převedena na novější verzi (bude-li "
+"potřeba)."
 
 #. Type: string
 #. Description
@@ -43,7 +48,9 @@ msgstr "Identifikátor klíče monotone:"
 msgid ""
 "Enter the id of the key your monotone server will use. The key id is "
 "typically an email address."
-msgstr "Zadejte identifikátor klíče, který bude používat váš monotone server. Identifikátor klíče je obvykle emailová adresa."
+msgstr ""
+"Zadejte identifikátor klíče, který bude používat váš monotone server. "
+"Identifikátor klíče je obvykle emailová adresa."
 
 #. Type: password
 #. Description
@@ -57,5 +64,6 @@ msgstr "Heslo monotone klíče:"
 msgid ""
 "Please choose a passphrase for your monotone key. If left blank, one will be "
 "generated for you."
-msgstr "Zvolte prosím heslo pro klíč monotone. Ponecháte-li pole prázdné, vygeneruje se náhodné heslo."
-
+msgstr ""
+"Zvolte prosím heslo pro klíč monotone. Ponecháte-li pole prázdné, vygeneruje "
+"se náhodné heslo."
