--- a/po/fr.po
+++ b/po/fr.po
@@ -1,18 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# French debconf templates translation for monotone.
+# Copyright (C) 2006 Arnaud <arnaud.baysse@gmail.com>.
+#
+# This file is made available under the GNU GPL version 2.0 or
+# greater.  See the accompanying file COPYING for details.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: monotone\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-11-17 05:19+0100\n"
+"Report-Msgid-Bugs-To: monotone@packages.debian.org\n"
+"POT-Creation-Date: 2009-09-04 14:30-0700\n"
 "PO-Revision-Date: 2006-11-23 13:26+0100\n"
 "Last-Translator: Arnaud <arnaud.baysse@gmail.com>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-15\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: French\n"
 
@@ -20,7 +21,7 @@ msgstr ""
 #. Description
 #: ../monotone-server.templates:1001
 msgid "Automatically manage monotone database?"
-msgstr "Faut-il gérer automatiquement la base de données monotone ?"
+msgstr "Faut-il gÃ©rer automatiquement la base de donnÃ©es monotoneÂ ?"
 
 #. Type: boolean
 #. Description
@@ -30,15 +31,15 @@ msgid ""
 "selected, the database will automatically be created. Also when upgrading, "
 "the database will be automatically migrated if necessary."
 msgstr ""
-"Veuillez choisir si vous souhaitez gérer automatiquement la base de données "
-"monotone. La base de données sera alors automatiquement créée. De plus, lors "
-"d'une mise à jour, sa structure sera modifiée si nécessaire."
+"Veuillez choisir si vous souhaitez gÃ©rer automatiquement la base de donnÃ©es "
+"monotone. La base de donnÃ©es sera alors automatiquement crÃ©Ã©e. De plus, lors "
+"d'une mise Ã  jour, sa structure sera modifiÃ©e si nÃ©cessaire."
 
 #. Type: string
 #. Description
 #: ../monotone-server.templates:2001
 msgid "Monotone key id:"
-msgstr "Identifiant de la clé monotone :"
+msgstr "Identifiant de la clÃ© monotoneÂ :"
 
 #. Type: string
 #. Description
@@ -47,14 +48,14 @@ msgid ""
 "Enter the id of the key your monotone server will use. The key id is "
 "typically an email address."
 msgstr ""
-"Veuillez indiquer l'identifiant de la clé qu'utilisera le serveur monotone. "
-"Cet identifiant est généralement une adresse de courrier électronique."
+"Veuillez indiquer l'identifiant de la clÃ© qu'utilisera le serveur monotone. "
+"Cet identifiant est gÃ©nÃ©ralement une adresse de courrier Ã©lectronique."
 
 #. Type: password
 #. Description
 #: ../monotone-server.templates:3001
 msgid "Monotone key passphrase:"
-msgstr "Phrase secrète de la clé monotone :"
+msgstr "Phrase secrÃ¨te de la clÃ© monotoneÂ :"
 
 #. Type: password
 #. Description
@@ -63,5 +64,5 @@ msgid ""
 "Please choose a passphrase for your monotone key. If left blank, one will be "
 "generated for you."
 msgstr ""
-"Veuillez choisir une phrase secrète pour la clé de monotone. Si vous ne "
-"choisissez rien, une phrase sera crée automatiquement."
+"Veuillez choisir une phrase secrÃ¨te pour la clÃ© de monotone. Si vous ne "
+"choisissez rien, une phrase sera crÃ©e automatiquement."
