--- a/po/ja.po
+++ b/po/ja.po
@@ -1,17 +1,19 @@
 # Japanese debconf templates translation for monotone.
-# Copyright (C) 2007 Noritada Kobayashi
-# This file is distributed under the same license as the monotone package.
+# Copyright (C) 2007 Noritada Kobayashi <nori1@dolphin.c.u-tokyo.ac.jp>.
+#
+# This file is made available under the GNU GPL version 2.0 or
+# greater.  See the accompanying file COPYING for details.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: monotone (debconf) 0.31-6\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-02-02 04:32+0100\n"
+"Report-Msgid-Bugs-To: monotone@packages.debian.org\n"
+"POT-Creation-Date: 2009-09-04 14:30-0700\n"
 "PO-Revision-Date: 2007-03-01 17:36+0900\n"
 "Last-Translator: Noritada Kobayashi <nori1@dolphin.c.u-tokyo.ac.jp>\n"
 "Language-Team: Japanese <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: boolean
