--- a/po/pt.po
+++ b/po/pt.po
@@ -1,18 +1,19 @@
-# Portuguese translation for monotone's debconf messages
-# Copyright (C) 2007 Miguel Figueiredo
-# This file is distributed under the same license as the monotone package.
-# Miguel Figueiredo <elmig@debianpt.org>, 2007.
+# Portuguese debconf templates translation for monotone.
+# Copyright (C) 2007 Miguel Figueiredo <elmig@debianpt.org>.
+#
+# This file is made available under the GNU GPL version 2.0 or
+# greater.  See the accompanying file COPYING for details.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: monotone 0.31-7\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-03-03 04:32+0100\n"
+"Report-Msgid-Bugs-To: monotone@packages.debian.org\n"
+"POT-Creation-Date: 2009-09-04 14:30-0700\n"
 "PO-Revision-Date: 2007-03-09 22:20+0000\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: boolean
