--- a/po/templates.pot
+++ b/po/templates.pot
@@ -1,30 +1,31 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# LANGUAGE debconf templates translation for monotone.
+# Copyright (C) YEAR FULL NAME <EMAIL@ADDRESS>.
+#
+# This file is made available under the GNU GPL version 2.0 or
+# greater.  See the accompanying file COPYING for details.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: sjackman@debian.org\n"
-"POT-Creation-Date: 2006-11-13 14:30-0700\n"
+"Report-Msgid-Bugs-To: monotone@packages.debian.org\n"
+"POT-Creation-Date: 2009-09-04 14:30-0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: LANGUAGE <debian-l10n-LANGUAGE@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: boolean
 #. Description
-#: ../monotone-server.templates:4
+#: ../monotone-server.templates:1001
 msgid "Automatically manage monotone database?"
 msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../monotone-server.templates:4
+#: ../monotone-server.templates:1001
 msgid ""
 "Select this option to automatically manage the monotone database. If "
 "selected, the database will automatically be created. Also when upgrading, "
@@ -33,13 +34,13 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../monotone-server.templates:11
+#: ../monotone-server.templates:2001
 msgid "Monotone key id:"
 msgstr ""
 
 #. Type: string
 #. Description
-#: ../monotone-server.templates:11
+#: ../monotone-server.templates:2001
 msgid ""
 "Enter the id of the key your monotone server will use. The key id is "
 "typically an email address."
@@ -47,13 +48,13 @@ msgstr ""
 
 #. Type: password
 #. Description
-#: ../monotone-server.templates:17
+#: ../monotone-server.templates:3001
 msgid "Monotone key passphrase:"
 msgstr ""
 
 #. Type: password
 #. Description
-#: ../monotone-server.templates:17
+#: ../monotone-server.templates:3001
 msgid ""
 "Please choose a passphrase for your monotone key. If left blank, one will be "
 "generated for you."
