--- a/changelog
+++ b/changelog
@@ -8,8 +8,11 @@ monotone (0.45-1) unstable; urgency=low
     - Incorporates 00-upstream-fix-shebang-for-bash-script.diff.
   * Bump version for automatic database migration in monotone-server.postinst.
   * Backport upstream fix for 'mtn clone' documentation (closes: #555652).
-  * Adjust LSB header in monotone-server.monotone.init per advice by
-    Petter Reinholdtsen (closes: #542287).
+  * Adjust LSB header in monotone-server.monotone.init to match update-rc.d
+    settings, and force those settings to be applied on upgrade from 0.44-2
+    or earlier (closes: #542287).
+  * Build-depend on poppler-utils | xpdf-utils, as the latter may be dropped
+    from squeeze (closes: #549386).
   * New template translations:
     - Russian, thanks to Yuri Kozlov (closes: #541758).
     - Italian, thanks to Vincenzo Campanella (no bug).
