--- a/changelog
+++ b/changelog
@@ -1,10 +1,10 @@
-monotone (0.47) unstable; urgency=low
+monotone (0.47-1) unstable; urgency=low
 
   * New upstream version.
 
  -- Richard Levitte <richard@levitte.org>  Mon, 15 Mar 2010 07:50:37 +0100
 
-monotone (0.46) UNRELEASED; urgency=low
+monotone (0.46-1) UNRELEASED; urgency=low
 
   * New upstream version.  (never got release as Debian package)
     - Database schema upgrade is required
