A few things were forgotten in the release of 0.47-1: Update the copyright file. Add --timestamp to the mtn server startup.
As this is yet unrelease, I'm marking the changelog as such, to be updated later

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+monotone (0.47-2) UNRELEASED; urgency=low
+
+  * Updated the copyright years.
+  * Added --timestamp to the server startup in monotone-server.
+
+ -- Richard Levitte <richard@levitte.org>  Wed, 17 Mar 2010 07:46:15 +0100
+
 monotone (0.47-1) unstable; urgency=low
 
   * New upstream version.
