Backport upstream fix for fatal error during sync.

--- a/changelog
+++ b/changelog
@@ -1,9 +1,13 @@
 monotone (0.47-2) UNRELEASED; urgency=low
 
+  [ Richard Levitte ]
   * Updated the copyright years.
   * Added --timestamp to the server startup in monotone-server.
 
- -- Richard Levitte <richard@levitte.org>  Wed, 17 Mar 2010 07:46:15 +0100
+  [ Francis Russell ]
+  * Backport upstream fix for fatal error during sync (closes: #574512).
+
+ -- Francis Russell <francis@unchartedbackwaters.co.uk>  Fri, 04 Jun 2010 23:28:47 +0100
 
 monotone (0.47-1) unstable; urgency=low
 
