--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-monotone (0.47-2) UNRELEASED; urgency=low
+monotone (0.47-2) unstable; urgency=low
 
   [ Richard Levitte ]
   * Updated the copyright years.
