- New upstream release. - Remove backported fixes.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+monotone (0.48-1) UNRELEASED; urgency=low
+
+  * New upstream version.
+    - Incorporates 00-push-pull-sync-fail.diff and
+      10-slow-branchy-ancestry.diff.
+  * Fix monotone-server postrm script to delete auto-generated key during purge.
+    This broke when the filenames of keys started incorporating the key hash.
+
+ -- Francis Russell <francis@unchartedbackwaters.co.uk>  Wed, 23 Jun 2010 17:52:34 +0100
+
 monotone (0.47-2) unstable; urgency=low
 
   [ Richard Levitte ]
