--- a/changelog
+++ b/changelog
@@ -1,8 +1,9 @@
 monotone (0.48-2) UNRELEASED; urgency=low
 
   * Add myself to list of uploaders.
+  * Update to standards version 3.9.0 (no changes required). 
 
- -- Francis Russell <francis@unchartedbackwaters.co.uk>  Sat, 17 Jul 2010 18:47:44 +0100
+ -- Francis Russell <francis@unchartedbackwaters.co.uk>  Sat, 17 Jul 2010 19:08:25 +0100
 
 monotone (0.48-1) unstable; urgency=low
 
