--- a/changelog
+++ b/changelog
@@ -1,9 +1,13 @@
 monotone (0.48-2) UNRELEASED; urgency=low
 
   * Add myself to list of uploaders.
-  * Update to standards version 3.9.0 (no changes required). 
+  * Update to standards version 3.9.0 (no changes required).
+  * Apply upstream patch to fix FTBFS. A unit test
+    assumed that it was always impossible to migrate a monotone database located
+    inside an unwritable directory. This is no longer true with SQLite 3.7
+    (closes: #591112).
 
- -- Francis Russell <francis@unchartedbackwaters.co.uk>  Sat, 17 Jul 2010 19:08:25 +0100
+ -- Francis Russell <francis@unchartedbackwaters.co.uk>  Sun, 01 Aug 2010 02:41:40 +0100
 
 monotone (0.48-1) unstable; urgency=low
 
