--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+monotone (0.48.1-1) UNRELEASED; urgency=high
+
+  * New upstream release.
+    - Contains security fix to prevent crashing of servers with remote command
+      execution enabled.
+
+ -- Francis Russell <francis@unchartedbackwaters.co.uk>  Tue, 26 Oct 2010 16:42:37 +0100
+
 monotone (0.48-3) UNRELEASED; urgency=low
 
   * Add debian/source/format file as it may become mandatory.
