--- a/changelog
+++ b/changelog
@@ -1,3 +1,15 @@
+monotone (0.99.1-1) unstable; urgency=low
+
+  * New upstream version.
+  * debian/patches/00-fail_cleanly_on_unreadable_db.diff: removed, since
+    it's been fixed upstream.
+  * debian/patches/10-sqlite_3.7.3_empty_blob.diff: removed, since it's
+    been fixed upstream.
+  * debian/patches/20-empty-command.diff: removed, , since it's been fixed
+    upstream.
+
+ -- Richard Levitte <richard@levitte.org>  Thu, 11 Nov 2010 07:41:12 +0100
+
 monotone (0.48-3) unstable; urgency=high
 
   * Add debian/source/format file as it may become mandatory.
