--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+monotone (0.99.1-1+testing) testing; urgency=low
+
+  * Backport to distribution 'testing'.
+
+ -- Richard Levitte <richard@levitte.org>  Thu, 11 Nov 2010 08:31:57 +0100
+
 monotone (0.99.1-1) unstable; urgency=low
 
   * New upstream version.
