Add a little more to the news

--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,14 @@
 monotone (0.99.1-1) unstable; urgency=low
 
   * Upstream made major changes, for speed, usability and more.  This may
-    disrupt some script, as some options have been changed as well as
-    the output of some commands.  See NEWS and UPGRADE for full details.
+    disrupt some script, as some commands and options have been changed as
+    well as the output of some commands.  See NEWS and UPGRADE for full
+    details.
 
-    The database format has changed.  You need to do the following on each
-    of your databases after taking a backup of the (except for the server
-    database handled by the monotone-server package, for which it is done
-    automatically):
+    The database format has changed slightly.  You need to do the following
+    on each of your databases after taking a backup of the (except for the
+    server database handled by the monotone-server package, for which it is
+    done automatically):
 
         mtn db migrate
 
