--- a/changelog
+++ b/changelog
@@ -14,8 +14,9 @@ monotone (0.99.1-1) UNRELEASED; urgency=low
   [ Francis Russell ]
   * Make monotone-doc suggest monotone instead of require.
   * Update Vcs-Browser field to point to new source management front-end.
+  * Install manual page auto-generated during build instead of outdated version.
 
- -- Francis Russell <francis@unchartedbackwaters.co.uk>  Sat, 13 Nov 2010 22:50:30 +0000
+ -- Francis Russell <francis@unchartedbackwaters.co.uk>  Sun, 14 Nov 2010 01:20:10 +0000
 
 monotone (0.48-3) unstable; urgency=high
 
