--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+monotone (1.0~dev-1) UNRELEASED; urgency=low
+
+  * New upstream development version.
+
+ -- Richard Levitte <richard@levitte.org>  Tue, 30 Nov 2010 09:41:26 +0100
+
 monotone (0.99.1-1) UNRELEASED; urgency=low
 
   [ Richard Levitte ]
