* rules: Rewritten to use dh. * NEWS: Document that there's the package monotone-extras. * changelog: Document the changes. * control: New B-D for the tests of extras.  Because of the bash   completion part, the package 'monotone' also depends on bash 4 or   newer.  Add package information for 'monotone-extras'.  Have the   package 'monotone-server' depend on 'monotone-extras'. * patches/90-stacktrace-on-crash.diff: Adapt to the changes in monotone   1.0. * source/format: Move to the 3.0 (quilt) format.
* monotone.bash-completion: New file to specify the bash completion file
  to install.  It depends on bash >= 4.0.
* monotone.docs: Remove 'README.changesets' as it doesn't exist any
  more.
* monotone.examples: Mentioning the directory is enough.
* monotone-doc.dirs: Not needed any more.
* monotone-doc.docs: monotone.pdf now exists in the doc/ subdirectory.
  dh_installdocs can handle directories, so add doc/html as well.
* monotone-doc.info: The info files have moved to the doc/ subdirectory.
* monotone-extras.install: New file, installs files that are part of the
  package 'monotone-extras'.
* monotone-server.dirs: Remove usr/share/monotone/hooks, it's part of the
  package 'monotone-extras'.
* monotone-server.install: Add base files in /usr/share/monotone.
* monotone-server.postinst: Adapt to the new files that come with
  monotone 1.0.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+monotone (1.0~dev-2) unstable; urgency=low
+
+  A new package is produced, called monotone-extras, containing a
+  tested collection of extra scripts and monotone hooks.
+
+ -- Richard Levitte <richard@levitte.org>  Wed, 16 Feb 2011 01:26:39 +0100
+
 monotone (0.99.1-1) UNRELEASED; urgency=low
 
   * Upstream made major changes, for speed, usability and more.  This may
