--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+monotone (1.0-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Richard Levitte <richard@levitte.org>  Tue, 29 Mar 2011 06:35:13 +0200
+
 monotone (1.0~dev-2) unstable; urgency=low
 
   * New upstream development version.  The upstream source has gone
